--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "form-urlencoded": "^4.1.3",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
