--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.4",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "form-urlencoded": "^4.1.3",
     "graphql": "^14.6.0",
