--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.6.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "connected-react-router": "^6.7.0",
     "form-urlencoded": "^4.1.3",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
