--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.12.0",
     "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.1.3",
+    "react-redux-geolocation": "^1.0.14",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
