--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bootstrap": "^4.4.1",
     "connected-react-router": "^6.7.0",
     "form-urlencoded": "^4.1.3",
+    "formik": "^2.1.4",
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
+    "react-google-places-autocomplete": "^1.6.2",
     "react-recaptcha-google": "^1.1.1",
     "react-redux": "^7.1.3",
     "react-redux-geolocation": "^1.0.14",
@@ -26,7 +28,8 @@
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "build-css": "node-sass src/ -o src/",
