--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-autocomplete": "^1.8.1",
-    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap": "^1.0.1",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-google-places-autocomplete": "^1.6.2",
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "cra-build-watch": "^3.0.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.0",
     "react-app-rewired": "^2.1.5",
     "sass-loader": "^8.0.0"
   }
